--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "react-shop",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./Server/server.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HampusJohnOlausson/react-shop.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HampusJohnOlausson/react-shop/issues"
-  },
-  "homepage": "https://github.com/HampusJohnOlausson/react-shop#readme",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
+    "@types/express-fileupload": "^1.1.6",
     "@types/mongoose": "^5.10.5",
-    "@types/node": "^15.6.1",
-    "mongodb": "^3.6.8",
-    "nodemon": "^2.0.7"
+    "bcrypt": "^5.0.1",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.9",
+    "multer": "^1.4.2",
+    "node": "^16.1.0",
+    "nodemon": "^2.0.7",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.5",
+    "@types/node": "^15.3.0"
   }
 }
